{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 24,
  "lineage": "185b6866-62dd-a2b1-d7b2-fa264d842ad8",
  "resources": [
    {
      "module": "module.armor",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "retail_armor",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "WAF policy for retail MVP",
            "fingerprint": "Oh52lOijjaE=",
            "id": "projects/retail-mvp-prod/global/securityPolicies/retail-cloud-armor",
            "name": "retail-cloud-armor",
            "project": "retail-mvp-prod",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow all API endpoints",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches('/api/.*')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 500,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "Allow auth endpoints",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "request.path.matches('/api/auth/.*')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 900,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block SQL injection",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('sqli-v33-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block remote code execution incl Log4Shell",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('rce-v33-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 1002,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "rate_based_ban",
                "description": "Rate limit per IP",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "true"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preview": false,
                "priority": 2000,
                "rate_limit_options": [
                  {
                    "ban_duration_sec": 300,
                    "ban_threshold": [],
                    "conform_action": "allow",
                    "enforce_on_key": "IP",
                    "enforce_on_key_name": "",
                    "exceed_action": "deny(429)",
                    "exceed_redirect_options": [],
                    "rate_limit_threshold": [
                      {
                        "count": 100,
                        "interval_sec": 60
                      }
                    ]
                  }
                ],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/securityPolicies/retail-cloud-armor",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-28T07:37:11.158-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/retail-mvp-prod/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/networks/gcp-vpc",
            "priority": 1000,
            "project": "retail-mvp-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.166.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2026-04-28T07:37:11.295-07:00",
            "id": "projects/retail-mvp-prod/global/addresses/private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/networks/gcp-vpc",
            "prefix_length": 16,
            "project": "retail-mvp-prod",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/addresses/private-ip-address"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/retail-mvp-prod/global/networks/gcp-vpc",
            "mtu": 0,
            "name": "gcp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6735028495851550949",
            "project": "retail-mvp-prod",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/networks/gcp-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-28T07:37:11.769-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/retail-mvp-prod/regions/us-central1/routers/gcp-router",
            "name": "gcp-router",
            "network": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/networks/gcp-vpc",
            "project": "retail-mvp-prod",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/regions/us-central1/routers/gcp-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "retail-mvp-prod/us-central1/gcp-router/gcp-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "gcp-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "retail-mvp-prod",
            "region": "us-central1",
            "router": "gcp-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-28T07:37:11.876-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/retail-mvp-prod/regions/us-central1/subnetworks/gcp-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "gcp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/global/networks/gcp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "retail-mvp-prod",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods-range"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/retail-mvp-prod/regions/us-central1/subnetworks/gcp-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}